--- a/SyncPlaylistApp/SyncPlaylistApp.csproj
+++ b/SyncPlaylistApp/SyncPlaylistApp.csproj
@@ -61,4 +61,7 @@
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.241114003" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SyncPlaylistApp.Core\SyncPlaylistApp.Core.csproj" />
+  </ItemGroup>
 </Project>
